--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                     Un Data Analyste.
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                  Expert en Python, R et SQL pour l'analyse de données. Expérience chez XYZ Corp, 
+                  avec une augmentation de 20% du taux de conversion. Projets
+                  incluent analyse COVID-19 et modèles de prévision de la demande. 
+                  Master en Analyse de Données, certifications IBM et Google Analytics. 
+                  Passionné par l'exploitation des données pour des décisions stratégiques.
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
