--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                     Un Data Analyste.
                 </h1>
                 <p>
-                  Expert en Python, R et SQL pour l'analyse de données. Expérience chez XYZ Corp, 
+                  Expert en Python, R et SQL pour l'analyse de données. Expérience chez Solibra, 
                   avec une augmentation de 20% du taux de conversion. Projets
-                  incluent analyse COVID-19 et modèles de prévision de la demande. 
-                  Master en Analyse de Données, certifications IBM et Google Analytics. 
+                  incluent analyse des Stoks et modèles de prévision de la demande. 
+                  Master en Analyse de Données a Udacity, certifications IBM et Google Analytics. 
                   Passionné par l'exploitation des données pour des décisions stratégiques.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
-                        <span class="btn-text">Download CV</span>
+                    <a href="files/Nda kouassi Jean - CV Data analyste.pdf" class="main-btn">
+                        <span class="btn-text">Télécharger mon CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
